--- a/assets/app/app.component.html
+++ b/assets/app/app.component.html
@@ -2,7 +2,7 @@
 <div class="container-fluid">
     <div class="col-md-6">
         <h3>Your Own Video</h3>
-        <video #ownvideo height="640" width="480" autoplay></video>
+        <video #ownvideo height="640" width="480" type="video/mp4" muted autoplay></video>
     </div>
     <div class="col-md-6">
         <h3>Peer's Video</h3>
